# rs3-study-curvature

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  Makefile  README.md  TODO.md  index.html  migrate_layout.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  pages.yml
annexes/: index.html
compare_nearest/: index.html
compare_quick/: index.html
configs/: class_groups.yml  class_map.yml  config.example.yaml  config.yaml
datasets/: index.html
discussion/: index.html
docs/: annexes.md  article.md  article_draft.md  compare_nearest.md  compare_quick.md  datasets.md  discussion.md  hotspots.md  index.md  method.md  paper.md  product.md  reproducibility.md  results.md  summary_article.md
docs/etat-de-l-art/: applications.md  index.md  intro.md  methodes-capteurs.md  methodes-geospatiales.md  methodes-vision.md  modeles-geometriques.md
docs/methods/: curvature.md  index.md  osm-ign-pipeline.md  profils-classes.md
docs/reports/: bias_sweep.md  (+4 more)
hotspots/: index.html
method/: index.html
paper/: index.html
product/: index.html
reproducibility/: index.html
results/: index.html
scripts/: analyze_stats.py  bias_sweep_matching.py  curve_metrics.py  curve_profiles.py  extract_curves.py  gen_report.py  gen_report_by_class.py  gen_report_curves.py  match_curves.py  plot_distributions.py  plot_distributions_by_class.py  run_stats.py  run_stats_by_class.py
search/: search_index.json
tests/: test_curvature.py
tools/: compare_nearest.py  compare_quick.py  make_gpkg_hotspots.py  plot_quantiles.py
(+51 files in other folders)
